--- a/HotelApi/appsettings.json
+++ b/HotelApi/appsettings.json
@@ -1,9 +1,30 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+      //{
+      //  "Name": "Seq", //Need to download seq and set up the url here to see all the logs in the seq application
+      //  "Args": {
+      //    "serverUrl": ""
+      //  }
+      //}
+    ]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "HotelConnection": "Server=DESKTOP-283BDF2\\SQLEXPRESS2019;Database=hotelListDb;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  }
 }
